--- a/index/index.html
+++ b/index/index.html
@@ -22,33 +22,45 @@
 
     <main>
 
-        <a href="#">Download Excursion (Coming soon!)</a>
+        <div>
 
-        <figure>
+            <a href="#">Download Excursion (Coming soon!)</a>
 
-            <video src="../resources/videos/excursion.mp4" autoplay muted loop>Video not supported</video>
+            <figure>
 
-        </figure>
+                <video src="../resources/videos/excursion.mp4" autoplay muted loop>Video not supported</video>
 
-        <h2>Your personal travel guide</h2>
+            </figure>
 
-        <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+        </div>
 
-        <figure>
+        <div>
+            
+            <h2>Your personal travel guide</h2>
 
-            <img class="first_img" src="../resources/images/camp.jpg" />
+            <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
 
-        </figure>
+            <figure>
 
-        <figure>
+                <img class="first_img" src="../resources/images/camp.jpg" />
 
-            <img class="second_img" src="../resources/images/phone.png" />
+            </figure>
 
-        </figure>
+        </div>
 
-        <h2 class="less_margin">Coming Soon for iPhone and Android</h2>
+        <div>
 
-        <a href="#">Download Excursion (Coming soon!)</a>
+            <figure>
+
+                <img class="second_img" src="../resources/images/phone.png" />
+
+            </figure>
+
+            <h2 class="less_margin">Coming Soon for iPhone and Android</h2>
+
+            <a href="#">Download Excursion (Coming soon!)</a>
+
+        </div>
 
     </main>
 
